# parallel-appium

./: Makefile  README.md  config.env.example  pyproject.toml  pytest.ini  start_hub.py  verify_setup.py
src/appium_hub/: __init__.py  config.py  gateway.py  main.py  server_manager.py  session_pool.py
tests/: conftest.py  test_parallel_appium.py  test_simple_example.py
